Fix sort button alignment

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -64,7 +64,7 @@ li.past-searches {
 }
 .sort-buttons{
   margin: 5% 0;
-  text-align: center;
+  text-align: left;
 }
 h3 {
   margin: 0 0 2% 0;
